Post ctrl and swagger
